comment post in challenge
