# src/controller/comment/index.ts
@@ -1,0 +1,10 @@
+import { InteractionResponse } from "../interaction";
+
+export interface CommentBody {
+    author: string
+    comment: string
+}
+
+export interface CommentResponse extends InteractionResponse{
+    comment: string,
+}
